# rash

./: .commitlintrc.json  .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO  Dockerfile  Dockerfile.alpine  Dockerfile.armv7  Dockerfile.debian  Dockerfile.debian.dockerignore  Dockerfile.musl  INSTALL.md  Makefile  README.md  RELEASE.md  cliff.toml  install-precommit.rh  renovate.json5
.cargo-husky/hooks/: commit-msg  pre-commit
.ci/: PKGBUILD-bin.j2  PKGBUILD.j2  generate-pkgbuild.rh  release.sh  terminalize_examples.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aur-publish.yml  auto-tag.yaml  auto-tag.yml  automerge.yml  autotag.yml  commitlint.yml  dco.yml  docker_images.yml  pages.yml  pre-commit.yml  rust.yml  tag_version.yml
.opencode/skills/release/: SKILL.md
ansible-rs-core/: Cargo.toml
artwork/: README.md
container-init-core/: Cargo.toml
container-init-core/src/: context.rs  main.rs
container-init-core/src/executor/: task.rs
container-init-core/src/modules/: command.rs
container-init-core/src/plugins/inventory/: env.rs
design/: concept_map.mm  concept_map.mm.html  concept_map.opml  executor.md  modules.md  plugins.md
docs/: vm-dev-tooling-analysis.md
docs/adr/: 001-become-method-sudo.md
examples/: all_functions.rh  apt.rh  apt_hold.rh  assert.rh  blkdiscard.rh  blocks.rh  builtins.rh  certbot.rh  conntrack.rh  consul_acl.rh  copy.rh  crypttab.rh  diff.rh  docker_compose.rh  docker_config.rh  docker_network.rh  docker_swarm.rh  dpkg_selections.rh  entrypoint.rh  env.rh  env_missing.rh  env_name_missing.rh  environment.rh  fetch.rh  flatpak.rh  get_url.rh  grafana.rh  grafana_dashboard.rh  group.rh  handlers.rh  hellow_world.rh  helm.rh  incus.rh  influxdb_query.rh  ini_file.rh  iso_extract.rh  iterate.rh  jenkins_job.rh  kubernetes.rh  libvirt.rh  (+35 more)
examples/dotfiles/: dots
examples/dotfiles/lib/: copy_and_update.rh
examples/envar-api-gateway/: Dockerfile  README.md  entrypoint.rh
examples/php-fpm/: .gitignore  entrypoint.rh  opcache.ini.j2  www.conf.j2
mdbook_rash/: Cargo.toml
mdbook_rash/src/: lib.rs  main.rs
rash-core/: Cargo.toml
rash-core/src/: constants.rs  context.rs  error.rs  main.rs
rash-core/src/executor/: task.rs
rash-core/src/modules/: command.rs  mod.rs
rash-core/src/plugins/inventory/: env.rs
rash_book/: .gitignore  book.toml
rash_book/src/: SUMMARY.md  builtins.md  cli.md  contributing.md  docopt.md  filters.md  getting-started.md  getting_started.md  index.md  install.md  installation.md  introduction.md  jinja.md  lookups.md  module_index.md  modules.md  overview.md  parser.md  quickstart.md  roadmap.md  runtime.md  syntax.md  tasks.md  templates.md  title-page.md  vars.md
rash_core/: Cargo.toml
rash_core/benches/: docopt.rs
rash_core/src/: context.rs  docopt.rs  error.rs  input.rs  job.rs  lib.rs  logger.rs  main.rs  task.rs  utils.rs
rash_core/src/docopt/: mod.rs  options.rs  utils.rs
rash_core/src/executor/: mod.rs  task.rs
rash_core/src/facts/: builtin.rs  env.rs  mod.rs
rash_core/src/jinja/: error_utils.rs  mod.rs  utils.rs
rash_core/src/jinja/lookup/: file.rs  find.rs  mod.rs  password.rs  passwordstore.rs  pipe.rs  utils.rs  vault.rs
rash_core/src/modules/: acl.rs  alternatives.rs  apk.rs  apt.rs  apt_hold.rs  apt_repository.rs  archive.rs  assemble.rs  assert.rs  async_status.rs  at.rs  auditd.rs  authorized_key.rs  aws_s3.rs  blkdiscard.rs  block.rs  borgmatic.rs  btrfs.rs  cargo.rs  certbot.rs  cgroups.rs  chroot.rs  cloud_init.rs  cloudflare_dns.rs  command.rs  composer.rs  conntrack.rs  consul.rs  consul_acl.rs  consul_kv.rs  consul_node.rs  consul_service.rs  copy.rs  cron.rs  cronvar.rs  crypttab.rs  dconf.rs  debconf.rs  debootstrap.rs  debug.rs  (+180 more)
rash_core/src/plugins/facts/: env.rs  mod.rs
rash_core/src/plugins/inventory/: mod.rs
rash_core/src/task/: handler.rs  mod.rs  new.rs  valid.rs
rash_core/src/utils/: jinja2.rs  mod.rs  tera.rs
rash_core/src/vars/: builtin.rs  env.rs  mod.rs
rash_core/tests/: rash_derive.rs
rash_core/tests/cli/: args.rs  become_method.rs  environment.rh  environment.rs  mod.rs
rash_core/tests/cli/modules/: apk.rs  apt.rs  apt_hold.rs  at.rs  authorized_key.rs  btrfs.rs  cargo.rs  conntrack.rs  cron.rs  cronvar.rs  crypttab.rs  dconf.rs  debconf.rs  dnf.rs  docker_compose.rs  docker_config.rs  docker_container.rs  docker_image.rs  docker_info.rs  docker_login.rs  docker_network.rs  docker_prune.rs  docker_secret.rs  docker_volume.rs  dpkg_selections.rs  dynamic_e2e.rs  dynamic_test.rs  ethtool.rs  expect.rs  fail.rs  fail2ban.rs  firewalld.rs  flatpak.rs  gem.rs  git.rs  gpg_key.rs  group.rs  grub.rs  haproxy.rs  homebrew.rs  (+46 more)
rash_core/tests/cli/modules/dynamic/: test_hello.rh
rash_core/tests/cli/modules/dynamic/hello_module/: main.yml  meta.yml
rash_core/tests/mocks/: apk.rh  apt  apt-get.rh  apt-mark  bpftrace  brew.rh  cargo.rh  dconf  debconf-set-selections  debconf-show  dnf.rh  dpkg  dpkg-query  flatpak.rh  gem.rh  groupadd  groupdel  groupmod  npm.rh  pacman.rh  pip.rh  pip3.rh  rc-service  rc-update  rpm  snap.rh  sudo  systemctl  useradd  userdel  usermod  zypper.rh
rash_core/tests/modules/: include.rs  mod.rs  pacman.rs
rash_derive/: Cargo.toml
rash_derive/src/: lib.rs
test/: run.rh
test/modules/assemble/: assemble.rh
test/modules/async/: async_poll.rh
test/modules/block/: vars_scoping.rh
test/modules/cloud_init/: cloud_init.rh
test/modules/docker_exec/: docker_exec.rh
test/modules/ethtool/: ethtool.rh
test/modules/helm/: helm.rh
test/modules/iscsi/: iscsi.rh
test/modules/kubernetes/: kubernetes.rh
test/modules/nomad_job/: nomad_job.rh
test/modules/supervisor/: supervisor.rh
test/modules/timer/: timer.rh
test/task/retry_until/: retry_until.rh
test/task/vars_with_include/: included.tasks  main.rh
test/task/vars_with_template/: config.j2  setup.rh
