[workspace]
members = ["rash_core", "rash_derive", "mdbook_rash"]
resolver = "2"


[workspace.package]
version = "2.7.0"
authors = ["Pando85 <pando855@gmail.com>"]
rust-version = "1.80"
edition = "2021"
license-file = "LICENSE"
homepage = "https://rash.sh"
repository = "https://github.com/rash-sh/rash"
readme = "README.md"

[workspace.dependencies]
clap = "4.5.4"
log = "0.4.21"
regex = "1.10.4"
schemars = "0.8.17"
serde_json = "1.0.116"
serde_yaml = "0.9"

[profile.release]
codegen-units = 1
opt-level = 3
