[workspace]
members = ["rash_core", "rash_derive", "mdbook_rash"]
resolver = "2"


[workspace.package]
version = "2.8.0"
authors = ["Pando85 <pando855@gmail.com>"]
rust-version = "1.82"
edition = "2021"
license-file = "LICENSE"
homepage = "https://rash-sh.github.io"
repository = "https://github.com/rash-sh/rash"
readme = "README.md"

[workspace.dependencies]
clap = "4.5"
log = "0.4.21"
regex = "1.10"
schemars = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"
