[package]
name = "mdbook_rash"
description = "Binary to create doc from `rash` code"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "mdbook-rash"
path = "src/bin/mdbook-rash.rs"
doc = false

[dependencies]
rash_core = { path = "../rash_core", features = ["docs"], version = "1.10.3" }
lazy_static.workspace = true
log.workspace = true
regex.workspace = true
schemars.workspace = true
clap.workspace = true
chrono = "0.4.38"
env_logger = "0.11.3"
mdbook = { version = "0.4.37", default-features = false }
prettytable-rs = "^0.10"
semver = "1.0.22"
serde_json.workspace = true
serde_yaml.workspace = true
