[package]
name = "mdbook_rash"
description = "Binary to create doc from `rash` code"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "mdbook-rash"
path = "src/bin/mdbook-rash.rs"
doc = false

[dependencies]
rash_core = { path = "../rash_core", features = ["docs"], version = "2.17.0" }
log.workspace = true
regex.workspace = true
schemars.workspace = true
clap.workspace = true
chrono = "0.4.38"
env_logger = "0.11.3"
mdbook = { version = "0.4.37", default-features = false }
prettytable-rs = "^0.10"
semver = "1.0"
serde_json.workspace = true
serde_norway.workspace = true
