[package]
name = "rash_core"
description = "Declarative shell scripting using Rust native bindings"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "rash_core"
path = "src/lib.rs"

[[bin]]
name = "rash"
path = "src/bin/rash.rs"

[features]
default = ["passwordstore"]

docs = ["rash_derive/docs", "schemars"]
passwordstore = ["prs-lib"]

[dependencies]
rash_derive = { path = "../rash_derive", version = "2.14.3" }
log.workspace = true
regex.workspace = true
schemars = { workspace = true, optional = true }
serde_json.workspace = true
serde_yaml.workspace = true
byte-unit = "5.1"
console = "0.15"
minijinja = { version = "2.5.0", features = ["loader", "json", "loop_controls"] }
clap = { workspace = true, features = ["std", "color", "derive", "cargo"] }
exec = "0.3.1"
fern = { version = "0.7.0", features = ["colored"] }
ignore = "0.4"
ipc-channel = "0.20.0"
itertools = "0.14"
nix = { version = "0.30", features = ["process", "user"] }
prs-lib = { version = "0.5.1", optional = true }
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8"
serde-error = "0.1.2"
sha2 = "0.10"
shlex = "1.3"
similar = { version = "2.5", features = ["inline"] }
strum = "0.27.0"
strum_macros = "0.27.0"
tokio = { version = "1.45", features = ["rt-multi-thread"] }
tempfile = "3.10"
vaultrs = "0.7"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.0"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "docopt"
harness = false
