[package]
name = "rash_core"
description = "Declarative shell scripting using Rust native bindings"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "rash_core"
path = "src/lib.rs"

[[bin]]
name = "rash"
path = "src/bin/rash.rs"

[features]
default = ["passwordstore"]

docs = ["rash_derive/docs", "schemars"]
passwordstore = ["prs-lib"]

[dependencies]
rash_derive = { path = "../rash_derive", version = "2.17.8" }
log.workspace = true
regex.workspace = true
schemars = { workspace = true, optional = true }
serde_json.workspace = true
serde_norway.workspace = true
byte-unit = "5.1"
base64 = "0.22"
console = "0.16"
minijinja = { version = "2.12.0", features = ["loader", "json", "loop_controls", "builtins", "unicode", "urlencode"] }
clap = { workspace = true, features = ["std", "color", "derive", "cargo"] }
exec = "0.3.1"
fern = { version = "0.7.0", features = ["colored"] }
ignore = "0.4"
ipc-channel = "0.21.0"
itertools = "0.14"
libc = "0.2"
md-5 = "0.10"
nix = { version = "0.31", features = ["process", "user"] }
prs-lib = { version = "0.5.1", optional = true }
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "blocking", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8"
serde-error = "0.1.2"
sha1 = "0.10"
sha2 = "0.10"
shlex = "1.3"
similar = { version = "2.5", features = ["inline"] }
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { version = "1.45", features = ["rt-multi-thread"] }
tempfile = "3.10"
vaultrs = "0.7"
walkdir = "2.5"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.6"
xz2 = "0.1"
zip = { version = "8.0", default-features = false, features = ["deflate"] }
glob = "0.3"
rcgen = "0.14"
redis = "0.29"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.0"

[dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "docopt"
harness = false
