[package]
name = "rash_derive"
description = "rash derive crate"
version = "1.2.0"
authors = ["Pando85 <pando855@gmail.com>"]
edition = "2018"
license-file = "../LICENSE"
homepage = "https://rash.sh"
repository = "https://github.com/rash-sh/rash"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
schemars = { version = "0.8", optional = true }

[features]
docs = ["schemars"]
