[package]
name = "rash_derive"
description = "rash derive crate"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.81"
schemars = { workspace = true, optional = true }

[features]
docs = ["schemars"]
