[package]
name = "rash_derive"
description = "rash derive crate"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.81"
schemars = { workspace = true, optional = true }

[features]
docs = ["schemars"]
